--- a/index.html
+++ b/index.html
@@ -2,96 +2,114 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Nokia N8</title>
-<script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
+<title>Шифр</title>
 </head>
 <body bgcolor="e6f4ff">
-<h1 align="center">Nokia N8</h1>
-<h2 align="center"><font face="Comic Sans MS">Разборка телефона</font><h2>
-<p align="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/oLDE44y3Uoc" frameborder="0" allowfullscreen></iframe></p>
-<h2 align= center><font face="Comic Sans MS">Запчасти</font></h2>
-<b><table border="2" bgcolor="#ffe699" align="center">
-<tr>
-<td>Наименование</td>
-<td>Магазин</td>
-<td>Цена</td>
-<td>Кол-во</td>
-</tr>
-<tr>
-<td>Дисплей </td>
-<td>Aliexpress</td>
-<td>737,46 <img src="%D0%A0.png" width="18%" height="70%" alt="Руб."></td>
-<td>305 шт.</td>
-</tr>
-<tr>
-<td>Дисплей(amoled)</td>
-<td>Gsm-opt</td>
-<td>550 <img src="%D0%A0.png" width="18%" height="70%" alt="Руб."></td>
-<td>3-5 шт.</td>
-</tr>
-<tr>
-<td>Дисплей</td>
-<td>Gsm-opt</td>
-<td>650 <img src="%D0%A0.png" width="18%" height="70%" alt="Руб."></td>
-<td>5-10 шт.</td>
-</tr>
-<tr>
-<td>Тачскрин (с рамкой)</td>
-<td>Gsm-opt</td>
-<td>350 <img src="%D0%A0.png" width="18%" height="70%" alt="Руб."></td>
-<td>Ожидается 23.08</td>
-</tr>
-<tr>
-<td>Тачскрин</td>
-<td>Aliexpress</td>
-<td>478,44 <img src="%D0%A0.png" width="18%" height="70%" alt="Руб."></td>
-<td>870 шт.</td>
-</tr>
-<tr>
-<td>Тачскрин (с рамкой)</td>
-<td>Профи(Смоленск)</td>
-<td>260 <img src="%D0%A0.png" width="18%" height="70%" alt="Руб."></td>
-<td> очень мало</td>
-</tr>
-</table></b>
-<h2 align="center">Инструкции</h2> 
-<div class="spoil">
-<div class="smallfont"><input type="button" value="Как восстановить потерявшийся Ovi Store"; class="input-button" onclick="if (this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display != '') { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = ''; this.innerText = ''; this.value = 'Свернуть'; } else { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'none'; this.innerText = ''; this.value = 'Спойлер'; }"/>
-</div><div class="alt2"><div style="display: none; text-align:left;">           
-1. Скачиваем пакет Nokia Qt
-<br>2. Копируем файлы из пакета на флэш-диск/ карточку памяти смартфона.
-<br>3. Из папки Qt 4.6 for Symbian^3 устанавливаем “qt.sis” и “qtwebkit.sis”
-<br>4. Перезагружаем смартфон
-<br>5. Из папки Qt 4.7 for Symbian^3 устанавливаем “qt_4_7_0_opengl.sis”
-<br>6. Запускаем ярлык Магазин Ovi, скачиваем и устанавливаем приложение.
-<br>7. Перезагружаем смартфон.
-
-Скачать эти файлы можно по ссылке <a href="https://yadi.sk/d/vWTK-P2nQUMhe" ><img src="download.png" width="90" height="30" alt="Скачать"></a>
-</div>
-</div>
-</div>
- <h2 align="center">Прошивка</h2>
- <table border="1">
-<tr>
-<td>Тип</td>
-<td>Версия</td>
-<td>Языки</td>
-<td>Размер</td>
-<td>Ссылка</td>
-</tr>
-<tr>
-<td>RM-596</td>
-<td>111.040.1511</td>
-<td><img src="ua.gif" width="14" height="9" alt=""> <img src="ro.gif" width="14" height="9" alt=""> <img src="hu.gif" width="14" height="9" alt=""> <img src="gb.gif" width="14" height="9" alt=""> <img src="de.gif" width="14" height="9" alt=""> <img src="by.gif" width="14" height="9" alt=""> <img src="bg.gif" width="14" height="9" alt=""></td>
-<td>225 Мб.</td>
-<td><a href="https://allnokia.ru/firmware/download.php?id=518">Скачать</a></td>
-</tr>
-</table>
-<br> 
-<a href="https://allnokia.ru/soft/download.php?id=23">Nokia PC Suite v.7.1.180.94  <img src="ru.gif" width="14" height="9" alt="Rus"></a>
- <br> 
- <br> 
- <br> 
- <p align="center">&copy; 2017 Nokia user   
+А ты думал все так просто?<font color="#ffffff">
+<br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <font color="#ffffff">Разгадал?Ну да это было просто!144445144728201446291446252014474514472714464620144629144630144726144747
+1447271446331447321446451447431446342014464214464614462914274420144625201
+4464514463020144629144627144646144633144732144645144743144634142726144443
+1446251446291446451446462014472714474320144725144625144632144628144625144
+6291446251446431427261444471446461446321446291447251446251446271446431447
+4714474614272620144429144643144747201447271446461446281446461427442014473
+2144727144646201446261447432014462914464614464214462514463214462514472714
+4744142744201447321447271446462014472714474320144725144625144632144628144
+6251446291446251446431427442014472714474320144629144646144643144631144630
+1446452014464614472714464714472514462514462714463314472714474420144745144
+7271446461447272014472714463014464214472614472720144644144645144630201446
+2720144443144526142726</font>
 </body>
 </html>
